<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityList">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerActivityItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addActivityItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="640dp"
        android:clickable="true"
        android:contentDescription="@string/add_activity"
        app:backgroundTint="#1C1A1A" />

</RelativeLayout>